add fav icon and some stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Bufflio - Never Miss a Subscription Renewal</title>
+    <meta
+      name="description"
+      content="Track all your subscriptions in one place. Get timely reminders before renewals so you can make informed decisions about your digital services. Perfect for nomads!"
+    />
+    <meta
+      name="keywords"
+      content="subscription tracker, subscription management, digital nomad tools, subscription reminders, subscription renewal"
+    />
+    <meta name="author" content="Bufflio Team" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bufflio.com" />
+    <meta property="og:title" content="Bufflio - Never Miss a Subscription Renewal" />
+    <meta
+      property="og:description"
+      content="Track all your subscriptions in one place. Get timely reminders before renewals so you can make informed decisions about your digital services. Perfect for nomads!"
+    />
+    <meta property="og:image" content="https://bufflio.com/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bufflio.com" />
+    <meta property="twitter:title" content="Bufflio - Never Miss a Subscription Renewal" />
+    <meta
+      property="twitter:description"
+      content="Track all your subscriptions in one place. Get timely reminders before renewals so you can make informed decisions about your digital services. Perfect for nomads!"
+    />
+    <meta property="twitter:image" content="https://bufflio.com/og-image.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://bufflio.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
